--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Hiijii428 - blog</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/main.css">
+        <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     </head>
     <body>
         <header>
@@ -13,15 +14,30 @@
         </header>
         <div class="side_content">
             <div class="side_item side" id="nav">
-                <!-- <iframe src="../side.html" onload="side_iframe_setting()" frameborder="0"></iframe> -->
             </div>
-            <div class="side_item main">
+            <div class="side_item main" id="search">
+                <script>
+                    let html = document.querySelector("#search")
+                    $.ajax({
+                        type: 'GET',
+                        // 取得したいページのアドレス
+                        url: './data.json',
+                        success: function(data) {
+                            console.log(data)
+                            let blog_list = data.blog_list
+                            for(let b of blog_list){
+                                console.log(b)
+                                let html_tag = "<a href='"+b.link+"'><div>"+"<h2>"+b.title+"</h2>"+"<p>"+b.date+"</p><p>"+b.details+"</p>"+"</div></a>"
+                                html.innerHTML += html_tag
+                            }
+                        }
+                    });
+                </script>
             </div>
         </div>
         <footer>
             &copy; 2025 Hiijii428
         </footer>
-        <script src="https://code.jquery.com/jquery-1.9.1.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/8.2.2/markdown-it.min.js"></script>
         <script src="./js/main.js" type="text/javascript"></script>
     </body>
