updeted the index.html

--- a/side.html
+++ b/side.html
@@ -7,7 +7,7 @@
 <nav>
     <h3>ページマップ</h3>
     <a href="../index.html">トップ</a>
-    <a href="./search.html">ブログ一覧</a>
+    <!-- <a href="./search.html">ブログ一覧</a> -->
     <a href="./form.html">フォーム</a>
     <a href="https://github.com/hiijii428/">Github</a>
 </nav>
