updeted the pege-map and css etc...

--- a/form.html
+++ b/form.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="ja">
     <head>
-        <title>Hiijii428 - blog</title>
+        <title>form - Hiijii428 blog</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/main.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=yes">
+
     </head>
     <body>
         <header>
@@ -11,6 +13,7 @@
             <p>2011年生まれの学生です。2024年から独学で<span>HTML</span>,<span>js</span>,<span>arduino</span>などを作っています。<br>
             素人ながら頑張ってます。よろしくどうぞ。</p>
         </header>
+        <div class="header_nav"></div>
         <div class="side_content">
             <div class="side_item side"id="nav">
             </div>
