--- a/side.html
+++ b/side.html
@@ -13,11 +13,12 @@
 </nav>
 <hr>
 <div class="profile">
+    <h3>Hiijii428</h3>
     <h3>プロフィール</h3>
     <div>
     <ul>
         <li>2011年生まれ</li>
-        <li>日本育ち</li>
+        <li>日本生まれ、日本育ち</li>
     </ul>
     <h4>よく使う言語</h4>
     <ul>
