updeted the header_nav.html

--- a/header_nav.html
+++ b/header_nav.html
@@ -1,5 +1,13 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" href="./css/main.css">
+    </head>
+<body>
 <nav>
     <a href="../index.html">トップ</a>
     <a href="./form.html">フォーム</a>
     <a href="https://github.com/hiijii428/">Github</a>
 </nav>
+</body>
+</html>
