--- a/index.html
+++ b/index.html
@@ -23,14 +23,13 @@
                     let html = document.querySelector("#search")
                     $.ajax({
                         type: 'GET',
-                        // 取得したいページのアドレス
                         url: './data.json',
                         success: function(data) {
                             console.log(data)
                             let blog_list = data.blog_list
                             for(let b of blog_list){
                                 console.log(b)
-                                let html_tag = "<a href='"+b.link+"'><div>"+"<h2>"+b.title+"</h2>"+"<p>"+b.date+"</p><p>"+b.details+"</p>"+"</div></a>"
+                                let html_tag = "<a href='"+"/blog/?link="+b.link+"&title="+b.title+"'><div>"+"<h2>"+b.title+"</h2>"+"<p>"+b.date+"</p><p>"+b.details+"</p>"+"</div></a>"
                                 html.innerHTML += html_tag
                             }
                         }
