updated the Link of code

--- a/side.html
+++ b/side.html
@@ -6,9 +6,8 @@
 <body>
 <nav>
     <h3>ページマップ</h3>
-    <a href="../index.html">トップ</a>
-    <!-- <a href="./search.html">ブログ一覧</a> -->
-    <a href="./form.html">フォーム</a>
+    <a href="https://hiijii428.github.io/blog/index.html">トップ</a>
+    <a href="https://hiijii428.github.io/blog/form.html">フォーム</a>
     <a href="https://github.com/hiijii428/">Github</a>
 </nav>
 <hr>
