--- a/header_nav.html
+++ b/header_nav.html
@@ -5,8 +5,8 @@
     </head>
 <body>
 <nav>
-    <a href="../index.html">トップ</a>
-    <a href="./form.html">フォーム</a>
+    <a href="https://hiijii428.github.io/blog/index.html">トップ</a>
+    <a href="https://hiijii428.github.io/blog/form.html">フォーム</a>
     <a href="https://github.com/hiijii428/">Github</a>
 </nav>
 </body>
