--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Hiijii428 - blog</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="https://hiijii428.github.io/blog/css/main.css">
         <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=yes">
     </head>
