updated the Link of code

--- a/form.html
+++ b/form.html
@@ -3,7 +3,7 @@
     <head>
         <title>form - Hiijii428 blog</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="https://hiijii428.github.io/blog/css/main.css">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=yes">
 
     </head>
@@ -26,6 +26,6 @@
         </footer>
         <script src="https://code.jquery.com/jquery-1.9.1.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/8.2.2/markdown-it.min.js"></script>
-        <script src="./js/main.js" type="text/javascript"></script>
+        <script src="https://hiijii428.github.io/blog/js/main.js" type="text/javascript"></script>
     </body>
 </html>
