--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
             &copy; 2025 Hiijii428
         </footer>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/8.2.2/markdown-it.min.js"></script>
-        <script src="./js/main.js" type="text/javascript"></script>
+        <script src="https://hiijii428.github.io/blog/js/main.js" type="text/javascript"></script>
     </body>
 </html>
