--- a/side.html
+++ b/side.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="./css/main.css">
+        <link rel="stylesheet" href="https://hiijii428.github.io/blog/css/main.css">
     </head>
 <body>
 <nav>
