updated the design

--- a/side.html
+++ b/side.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="https://hiijii428.github.io/blog/css/main.css">
+        <link rel="stylesheet" href="./css/main.css">
     </head>
 <body>
 <nav>
@@ -11,23 +12,23 @@
     <a href="https://github.com/hiijii428/">Github</a>
 </nav>
 <hr>
-<div class="profile">
-    <h3>Hiijii428</h3>
-    <h3>プロフィール</h3>
-    <div>
-    <ul>
-        <li>2011年生まれ</li>
-        <li>日本生まれ、日本育ち</li>
-    </ul>
-    <h4>よく使う言語</h4>
-    <ul>
-        <li>日本語</li>
-        <li>HTML</li>
-        <li>Javascript</li>
-        <li>Python</li>
-        <li>たまにArduino</li>
-    </ul>
-    </div>
-</div>
+        <div id="profile">
+            <h2>プロフィール</h2>
+            <img src="profile.ico" alt="プロフィール写真" class="profile-pic">
+            <ul>
+                <li>・ 名前: Hiijii428</li>
+                <p>・ 2011年生まれの学生です。2024年から独学でプログラミングをやっています。</p>
+                <li>・ 好きな言語: <br>HTML, JavaScript, Python</li>
+                <li>・ 好きなエディタ: <br>Visual Studio Code</li>
+                <li>・ 好きなOS: <br>Linux一択</li>
+            </ul>
+        
+        </div>
+        <h2>ページマップ</h2>
+        <ul>
+            <li><a href="index.html">ホーム</a></li>
+            <li><a href="profile.html">自己紹介</a></li>
+            <li><a href="form.html">お問い合わせ</a></li>
+        </ul>
 </body>
 </html>
