--- a/index.html
+++ b/index.html
@@ -1,46 +1,46 @@
 <!DOCTYPE html>
 <html lang="ja">
-    <head>
-        <title>Hiijii428 - blog</title>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href="https://hiijii428.github.io/blog/css/main.css">
-        <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=yes">
-    </head>
-    <body>
+
+<head>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <link rel="stylesheet" href="https://hiijii428.github.io/blog/css/main.css">
+     <link rel="stylesheet" href="css/main.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>トップ - Hiijii428 Blog</title>
+</head>
+
+<body>
+    <div class="sidebar" id="nav">
+    </div>
+    <main>
         <header>
-            <h1>Hiijii428 Blog</h1>
+            <h1>Hiijii428 blog</h1>
             <p>2011年生まれの学生です。2024年から独学で<span>HTML</span>,<span>js</span>,<span>arduino</span>などを作っています。<br>
-            素人ながら頑張ってます。よろしくどうぞ。</p>
+                素人ながら頑張ってます。よろしくどうぞ。</p>
         </header>
-        <div class="header_nav"></div>
-        <div class="side_content">
-            <div class="side_item side" id="nav">
-            </div>
-            <div class="side_item main" id="search">
-                <h2>ブログ一覧</h2>
-                <script>
-                    let html = document.querySelector("#search")
-                    $.ajax({
-                        type: 'GET',
-                        url: './data.json',
-                        success: function(data) {
-                            console.log(data)
-                            let blog_list = data.blog_list
-                            for(let b of blog_list){
-                                console.log(b)
-                                let html_tag = "<a href='"+"./blog/?link="+b.link+"&title="+b.title+"'><div>"+"<h2>"+b.title+"</h2>"+"<p>"+b.date+"</p><p>"+b.details+"</p>"+"</div></a>"
-                                html.innerHTML += html_tag
-                            }
+        <div class="search" id="search">
+            <h2>ブログ一覧</h2>
+            <script>
+                let html = document.querySelector("#search");
+                $.ajax({
+                    type: 'GET',
+                    url: './data.json',
+                    success: function (data) {
+                        let blog_list = data.blog_list
+                        for (let b of blog_list) {
+                            let html_tag = "<a href='" + "./blog/?link=" + b.link + "&title=" + b.title + "'><div>" + "<h2>" + b.title + "</h2>" + "<p>" + b.date + "</p><p>" + b.details + "</p>" + "</div></a>"
+                            html.innerHTML += html_tag
                         }
-                    });
-                </script>
-            </div>
+                    }
+                });
+            </script>
+                    <script src="https://hiijii428.github.io/blog/js/main.js" type="text/javascript"></script>
         </div>
         <footer>
-            &copy; 2025 Hiijii428
+            <p>&copy; 2025 あなたの名前</p>
         </footer>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/8.2.2/markdown-it.min.js"></script>
-        <script src="https://hiijii428.github.io/blog/js/main.js" type="text/javascript"></script>
-    </body>
+    </main>
+</body>
+
 </html>
