updated the csslink

--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>自己紹介 - hiijii428 blog</title>
     <link rel="stylesheet" href="https://hiijii428.github.io/blog/css/main.css">
-    <link rel="stylesheet" href="./css/main.css">
+    <!-- <link rel="stylesheet" href="./css/main.css"> -->
 </head>
 <body>
     <div class="sidebar" id="nav">
