--- a/form.html
+++ b/form.html
@@ -3,8 +3,8 @@
     <head>
         <title>form - Hiijii428 blog</title>
         <meta charset="utf-8">
-        <!-- <link rel="stylesheet" href="https://hiijii428.github.io/blog/css/main.css"> -->
-        <link rel="stylesheet" href="./css/main.css">
+        <link rel="stylesheet" href="https://hiijii428.github.io/blog/css/main.css">
+        <!-- <link rel="stylesheet" href="./css/main.css"> -->
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=yes">
 
     </head>
