updated the profile of imges link

--- a/side.html
+++ b/side.html
@@ -5,10 +5,16 @@
         <link rel="stylesheet" href="./css/main.css">
     </head>
 <body>
+        <h2>ページマップ</h2>
+        <ul>
+            <li><a href="index.html">ホーム</a></li>
+            <li><a href="profile.html">自己紹介</a></li>
+            <li><a href="form.html">お問い合わせ</a></li>
+        </ul>
 <hr>
         <div id="profile">
             <h2>プロフィール</h2>
-            <img src="profile.ico" alt="プロフィール写真" class="profile-pic">
+            <img src="https://hiijii428.github.io/blog/profile.ico" alt="プロフィール写真" class="profile-pic">
             <ul>
                 <li>・ 名前: Hiijii428</li>
                 <p>・ 2011年生まれの学生です。2024年から独学でプログラミングをやっています。</p>
@@ -18,11 +24,5 @@
             </ul>
         
         </div>
-        <h2>ページマップ</h2>
-        <ul>
-            <li><a href="index.html">ホーム</a></li>
-            <li><a href="profile.html">自己紹介</a></li>
-            <li><a href="form.html">お問い合わせ</a></li>
-        </ul>
 </body>
 </html>
