updated the css

--- a/side.html
+++ b/side.html
@@ -2,14 +2,14 @@
 <html>
     <head>
         <link rel="stylesheet" href="https://hiijii428.github.io/blog/css/main.css">
-        <link rel="stylesheet" href="./css/main.css">
+        <!-- <link rel="stylesheet" href="./css/main.css"> -->
     </head>
 <body>
         <h2>ページマップ</h2>
         <ul>
-            <li><a href="index.html">ホーム</a></li>
-            <li><a href="profile.html">自己紹介</a></li>
-            <li><a href="form.html">お問い合わせ</a></li>
+            <li><a href="https://hiijii428.github.io/blog/">ホーム</a></li>
+            <li><a href="https://hiijii428.github.io/blog/profile.html">自己紹介</a></li>
+            <li><a href="https://hiijii428.github.io/blog/form.html">お問い合わせ</a></li>
         </ul>
 <hr>
         <div id="profile">
