--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <link rel="stylesheet" href="https://hiijii428.github.io/blog/css/main.css">
-     <link rel="stylesheet" href="css/main.css">
+     <!-- <link rel="stylesheet" href="css/main.css"> -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>トップ - Hiijii428 Blog</title>
@@ -30,7 +30,8 @@
                         let blog_list = data.blog_list
                         for (let b of blog_list) {
                             let html_tag = "<a href='" + "./blog/?link=" + b.link + "&title=" + b.title + "'><div>" + "<h2>" + b.title + "</h2>" + "<p>" + b.date + "</p><p>" + b.details + "</p>" + "</div></a>"
-                            html.innerHTML += html_tag
+                            console.log(html_tag);
+                            html.innerHTML += html_tag;
                         }
                     }
                 });
