--- a/form.html
+++ b/form.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="https://hiijii428.github.io/blog/css/main.css">
         <!-- <link rel="stylesheet" href="./css/main.css"> -->
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=yes">
-
+        <meta name="google-site-verification" content="HNaweeWF2MiuNFbNQP9blPUZ_rMnvbccyqaIMREOlfw" />
     </head>
     <body>
         <header>
