--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>トップ - Hiijii428 Blog</title>
+    <meta name="google-site-verification" content="HNaweeWF2MiuNFbNQP9blPUZ_rMnvbccyqaIMREOlfw" />
 </head>
 
 <body>
