--- a/profile.html
+++ b/profile.html
@@ -6,6 +6,7 @@
     <title>自己紹介 - hiijii428 blog</title>
     <link rel="stylesheet" href="https://hiijii428.github.io/blog/css/main.css">
     <!-- <link rel="stylesheet" href="./css/main.css"> -->
+    <meta name="google-site-verification" content="HNaweeWF2MiuNFbNQP9blPUZ_rMnvbccyqaIMREOlfw" />
 </head>
 <body>
     <div class="sidebar" id="nav">
