--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <script src="https://hiijii428.github.io/blog/js/main.js" type="text/javascript"></script>
         </div>
         <footer>
-            <p>&copy; 2025 あなたの名前</p>
+            <p>&copy; 2025 hiijii428</p>
         </footer>
     </main>
 </body>
